--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "StreamRunner",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack app/index.js",
+    "client": "cd client && npm start",
+    "api": "cd server && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ashkon91/SMDevBr.git"
   },
   "author": "",
   "license": "ISC",
@@ -19,24 +15,6 @@
   },
   "homepage": "https://github.com/ashkon91/SMDevBr#readme",
   "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-react": "^7.7.0",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-middleware": "^3.1.2",
-    "webpack-dev-server": "^3.1.3"
+    "npm-run-all": "^4.1.3"
   }
 }
