--- a/package.json
+++ b/package.json
@@ -13,8 +13,5 @@
   "bugs": {
     "url": "https://github.com/ashkon91/SMDevBr/issues"
   },
-  "homepage": "https://github.com/ashkon91/SMDevBr#readme",
-  "dependencies": {
-    "npm-run-all": "^4.1.3"
-  }
+  "homepage": "https://github.com/ashkon91/SMDevBr#readme"
 }
