--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "firebase-admin": "^5.12.1",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
   }
