--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
+    "socket.io-client": "^2.1.1",
     "superagent": "^3.8.3"
   },
   "devDependencies": {
