removed socket.io, set up client side firebase listeners with the JS SDK, restructured overlay routing to make back-end init easier, restructured and simplified firebase data structure, rewrote tournament formatter util, adjusted polling, it works

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/ashkon91/SMDevBr#readme",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "firebase": "^5.2.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
