--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,10 @@
   "homepage": "https://github.com/ashkon91/SMDevBr#readme",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "firebase": "^5.2.0",
+    "firebase": "5.0.4",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "socket.io-client": "^2.1.1",
     "superagent": "^3.8.3"
   },
   "devDependencies": {
